--- a/style.css
+++ b/style.css
@@ -24,54 +24,39 @@
 }
 
 body {
-  overflow: hidden;
-  padding: 5rem 0;
   font-family: var(--font-family-body);
-  font-size: var(--font-size);
   font-weight: var(--font-weight-body);
+  font-size: 1.2rem;
   position: relative;
+  padding: 3rem 0;
   color: var(--dark-blue);
 }
-body:before {
+
+body:before{
   position: absolute;
-  content: '';
-  width: 50vw;
-  height: 420px;
   top: 0;
   right: 0;
+  content: '';
+  width: 50vw;
+  height: 26.5rem;
   background: var(--light-grayish-blue);
-  border-radius: 0 0 0 4rem;
-  z-index: -10;
+  border-bottom-left-radius: 3.5rem;
+  z-index: -1;
 }
 
-ul {
-  list-style: none;
-}
+main { overflow-x: hidden; }
 
-img {
-  width: 100%;
-}
+img { width: 100%; }
+
+ul { list-style: none; }
+
+a { text-decoration: none; }
 
 /* ===Utils=== */
 .container {
-  width: 1200px;
-  max-width: 80%;
+  width: 1100px;
   margin: 0 auto;
-}
-
-.muted-text {
-  color: var(--grayish-blue);
-  text-transform: uppercase;
-  font-size: 0.8rem;
-}
-
-.main-title {
-  font-family: var(--font-family-headings);
-  font-size: 3.5rem;
-}
-
-.desc-text {
-  width: 70%;
+  max-width: 90%;
 }
 
 .flex {
@@ -79,143 +64,160 @@ img {
   align-items: center;
 }
 
-.pill {
-  background: var(--dark-blue);
-  color: #fff;
-  padding: 10px 20px;
-  border-radius: 2rem;
-  text-transform: uppercase;
-  font-size: 0.8rem;
-}
-
-.btn {
-  border: none;
-  outline: none;
-  background: var(--primary-color);
-  color: #fff;
-  padding: 1rem 2rem;
-  border-radius: 5px;
+.main-text {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
   text-transform: uppercase;
   font-family: var(--font-family-headings);
   font-weight: var(--font-weight-headings-bold);
 }
+.desc-text { 
+  line-height: 1.5;
+  margin-bottom: 1rem;
+}
+
+.muted-text {
+  color: var(--grayish-blue);
+  margin-left: 1rem;
+  letter-spacing: 2px;
+}
+
+.pill {
+  background: var(--dark-blue);
+  padding: 0.5rem 0.7rem;
+  border-radius: 2rem;
+  color: #fff;
+  letter-spacing: 1px;
+  font-family: var(--font-family-headings);
+  font-weight: var(--font-weight-headings-bold);
+}
+
+.btn {
+  background: var(--primary-color);
+  outline: none;
+  border: none;
+  color: #fff;
+  padding: 1rem;
+  border-radius: 5px;
+  font-family: var(--font-family-headings);
+  font-weight: var(--font-weight-headings-bold);
+  letter-spacing: 1.5px;
+  transition: opacity 0.5s ease-in-out;
+  cursor: pointer;
+}
+.btn:hover { opacity: 0.7; }
+
+.pill, .muted-text, .btn {
+  font-size: 0.7rem;
+  text-transform: uppercase;
+}
 
 /* ===Custom CSS=== */
 .navbar {
-  display: flex;
-  align-items: center;
   justify-content: space-between;
-  margin-bottom: 10rem;
   position: relative;
+  margin-bottom: 4rem;
 }
 
-.navbar__hamburger {
-  display: none;
+.navbar__logo {
+  width: 24px;
 }
+
+.navbar__hamburger { cursor: pointer; }
 
 .navbar__links {
-  display: flex;
-  align-items: center;
+  display: none;
+  position: absolute;
+  top: 4.5rem;
+  width: 100%;
+  background: #fff;
+  padding: 1.5rem;
+  box-shadow: -2px 2px 15px rgba(0, 0, 0, 0.3);
+  flex-direction: column;
   justify-content: space-between;
+  height: 15rem;
+  z-index: 100;
 }
+.navbar__links li { text-align: center; }
 
-.navbar__links li {
-  margin-left: 3rem;
-  cursor: pointer;
+.navbar__links li a {
+  color: var(--dark-blue);
   text-transform: uppercase;
   font-family: var(--font-family-headings);
+  font-weight: var(--font-weight-headings-bold);
+  letter-spacing: 1.5px;
 }
+
+.navbar__links li:hover a { text-decoration: underline; }
 
 .navbar__links li:last-child {
-  margin-left: 6em;
-  color: var(--dark-grayish-blue);
+  padding-top: 1.5rem;
+  border-top: 1px solid var(--light-grayish-blue);
+}
+.navbar__links li:last-child a {
+  color: var(--grayish-blue);
 }
 
-.navbar__links li:hover {
-  text-decoration: underline;
+.hero {
+  flex-direction: column;
 }
 
-.main__img {
-  order: 2;
-  flex: 65%;
-  transform: translateX(50%) scale(1.25);
+.hero__img {
+  margin-bottom: 4rem;
+  width: 150%;
+  transform: translateX(15%);
 }
 
-.main__text {
-  order: 1;
-  flex: 35%;
-}
+.announce { margin-bottom: 1rem; }
 
-.main__text > * {
-  margin-bottom: 2rem;
-}
-
-.announce span,
-.announce button {
-  margin-right: 1.5rem;
-}
 /* ===Media Query=== */
-@media (max-width: 750px) {
-  body {
-    overflow-y: scroll;
-    overflow-x: hidden;
-  }
-  .main-title {
-    font-size: 2.5rem;
-  }
-  .btn {
-    padding-left: 0.8rem;
-    padding-right: 0.8rem;
-    font-size: 0.8rem;
-  }
+@media (min-width: 750px) {
+  body { height: 100vh; }
 
-  .navbar {
-    margin-bottom: 2rem;
-  }
+  .navbar__logo { width: 32px; }
 
-  .navbar__hamburger {
-    display: block;
-  }
-
-  .navbar__links li,
-  .navbar__links li:last-child {
-    margin-left: 0rem;
-    text-align: center;
-    text-transform: uppercase;
-  }
+  .navbar__hamburger { display: none; }
 
   .navbar__links {
-    display: none;
-    position: absolute;
-    flex-direction: column;
-    top: 4rem;
-    left: 0;
-    width: 100%;
-    height: 250px;
-    background: #fff;
-    padding: 1.5rem;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    transition: all 0.6s ease-in-out;
+    display: flex;
+    position: static;
+    background: none;
+    padding: 0;
+    box-shadow: none;
+    flex-direction: row;
+    justify-content: flex-end;
+    height: initial;
     z-index: 1;
   }
 
+  .navbar__links li {
+    margin-left: 3rem;
+  }
+
   .navbar__links li:last-child {
-    border-top: 1px solid var(--dark-grayish-blue);
-    width: 100%;
-    padding-top: 1.5rem;
+    padding-top: 0;
+    border-top: none;
+    margin-left: 6rem;
   }
 
-  .main {
-    display: block;
+  .hero {
+    flex-direction: row;
   }
 
-  .main__img {
-    transform: translateX(-20px);
-    width: 160%;
-    margin-bottom: 4rem;
+  .hero__img {
+    width: 300%;
+    transform: translateX(40%);
+    margin-bottom: 0;
+    order: 2;
   }
 
-  .main__text > * {
-    margin-bottom: 1.5rem;
+  .hero__text {
+    order: 1;
+    width: 150%;
+  }
+
+  .btn {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 }
